# c-malloc

./: CMakeLists.txt  main.c
include/: cmemory.h
src/: cmemory.c
